# Programming-C_projects

./: README.md  sort.c
RGZ_Prog9var/: CMakeLists.txt  README.md  README.md:Zone.Identifier
RGZ_Prog9var/dic/: config.ini  config.ini:Zone.Identifier  input.txt
RGZ_Prog9var/examples/: config.ini  dict.txt  input.txt  output.txt
RGZ_Prog9var/src/: config.c  config.h  dictionary.c  dictionary.h  logger.c  logger.h  main.c  translator.c  translator.h  utf8util.c  utf8util.h
RGZ_Prog9var/tests/: test_translate.c
lab10/: lab10  lab10.c  lab1_1.c  lab1_2.c  lab1_3.h
lab10_struct/: lab1_1.c  lab1_2.c  lab1_3.h
lab12_library/: crypto  crypto.c  crypto.h  crypto_program
lab13_library/: CMakeLists.txt  crypto_program  makefile
lab13_library/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
lab13_library/src/: crypto.c  main.c
lab14_lists/: listRooms  list_rooms  list_rooms.c
lab15_lists/: lab16_treads copy.c  staff.csv  texBin  texBin.c
lab16_treads/: 16Report.md  lab16_treads  lab16_treads copy.c  lab16_treads.c
lab17_testing/: CMakeLists.txt  lab17_testing.c
lab18_cpp/src/: main.cpp  paint_core.cpp  paint_core.hpp
lab9/:  sort.c  README.md  git.docm  sort.c
lab9_git/:  sort.c
lab9_git/MergeSort/: mergesort.py
Отладчик/: task1  task1.c  task2  task2.c  task3  task4  task4.c  task5  task5.c
